Code cleanup, deprecations, some adaptations for new properties. Some classes that currently have errors will soon be removed.
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@6677 51baf565-9d33-0410-a72c-fc3788e3496d